--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirement.txt
+    - name: Set Environment
+        run: export GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
     - name: Test Response
       run: python test_response.py
       working-directory: ./test
