--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,11 +20,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirement.txt
-    - name: Set Environment
-        run: export GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
     - name: Test Response
       run: python test_response.py
       working-directory: ./test
     - name: Test StatusCode
       run: python test_statuscode.py
       working-directory: ./test
+    - env:
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secret.GOOGLE_APPLICATION_CREDENTIALS }}
