--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         GOOGLE_APPLICATION_CREDENTIALS: credentials/voice-recognition-288501-df448cb420f2.json
       run: |
-        pwd
+        mkdir credentials
         touch ${GOOGLE_APPLICATION_CREDENTIALS}
         echo ${GOOGLE_APPLICATION_CREDENTIALS_JSON} > ${GOOGLE_APPLICATION_CREDENTIALS}
     - name: Test Response
