Update test.yml install ffmpeg

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
+        sudo apt update
+        sudo apt -y upgrade
+        sudo apt install ffmpeg
         python -m pip install --upgrade pip
         pip install -r requirement.txt
     - name: Set Google Aplication Credentials
